--- a/Web A2/script/experience.html
+++ b/Web A2/script/experience.html
@@ -99,7 +99,7 @@
                             <img alt="hlogo" src="../image/hlogo.jpg" height=150 width=150" />
                         </div>
                         <div class="col-md-6 column">
-                            <img alt="140x140" src="../image/eylogo.png"height=150 width=200" />
+                            <img alt="eylogo" src="../image/eylogo.png"height=150 width=200" />
                         </div>
                     </div>
                 </div>
