--- a/Web A2/script/index.html
+++ b/Web A2/script/index.html
@@ -51,7 +51,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img alt="" src="../image/img1.jpg" />
+                        <img alt="market" src="../image/img1.jpg" />
                         <div class="carousel-caption">
                             <h4>
                                 Market Square, Downtown Pittsburgh
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img alt="" src="../image/img2.jpg" />
+                        <img alt="campus" src="../image/img2.jpg" />
                         <div class="carousel-caption">
                             <h4>
                                 UPitt Campus
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img alt="" src="../image/img3.jpg" />
+                        <img alt="forbes" src="../image/img3.jpg" />
                         <div class="carousel-caption">
                             <h4>
                                 Forbes Avenue
