--- a/Web A2/script/index.html
+++ b/Web A2/script/index.html
@@ -85,7 +85,7 @@
                 I moved to Pittsburgh in 2014, and have lived here for more than 4 years.
             </p>
             <p>
-                <a class="btn" href="#">View details »</a>
+                <a class="btn" href="../script/experience.html">View details »</a>
             </p>
         </div>
     </div>
